fixed font overflow in season heading on 599px or less

--- a/styles/RW_style.css
+++ b/styles/RW_style.css
@@ -103,7 +103,7 @@ header {
   display: flex;
   flex-direction: column;
   gap: 5vw;
-  padding: 4vw 2vw;
+  padding: 4vw 0;
   text-align: center;
 }
 
@@ -111,7 +111,7 @@ header h1 {
   color: white;
   background: linear-gradient(to bottom, #383838, #f0f6fc);
   background: linear-gradient(to bottom, var(--puck) 33%, var(--ice));
-  font-size: 3.5rem;
+  font-size: 14vw;
   padding: 0 10px;
   width: 95%;
 }
@@ -121,7 +121,8 @@ section#team {
 }
 
 #team h2, #team h3 {
-  font-size: 5rem;
+  font-size: 24vw;
+  letter-spacing: -3px;
   text-align: center;
   color: #c8102e;
   color: var(--WingsRed);
@@ -129,7 +130,7 @@ section#team {
 }
 
 #team h3 {
-  font-size: 3.5rem;
+  font-size: 15vw;
 }
 
 
